home work spring_security

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'mysql:mysql-connector-java:8.0.21'
+    implementation 'org.springframework.boot:spring-boot-starter-security:2.5.4'
 }
 
 test {
