--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=5500
+
 spring.datasource.url=jdbc:mysql://localhost/netology
 spring.datasource.username=root
 spring.datasource.password=mysql
